# badge-creator

./: .coveragerc  README.md  setup.cfg  setup.py  tox.ini
src/badge_creator/: __init__.py  cli.py  generators.py  utils.py
tests/: test_cli.py  test_generators.py  test_utils.py
