[metadata]
name = badge-creator
description = A python library and cli to generate project badges
author = gaz
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/gazzasaur/badge-creator
project_urls =
    Source = https://github.com/gazzasaur/badge-creator

platforms = any

# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Stable
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

install_requires =
    pillow>=8.4.0
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = badge_creator.module:function
# For example:
# console_scripts =
#     fibonacci = badge_creator.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
addopts =
    --cov badge_creator --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = badge_creator
